--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block title %} Blog | Welcome {% endblock title %}
-
+{% load static %}
 {% block content %} 
     <main class="sp">
       <div class="container">
@@ -20,59 +20,54 @@
           </div>
           <div class="newsletter">
             <form method="POST">
-              <input
-                type="email"
-                name="email"
-                maxlength="100"
-                placeholder="Enter your email"
-                required=""
-                id="id_email"
-              />
+              {% csrf_token %}
+              {{subscribe_form}}
               <button class="btn btn-primary">Subscribe</button>
             </form>
+
+            {% if success_message %} 
+              <br><h1 style="color: green;">{{success_message}}</h1>
+            {% endif%}
+
           </div>
         </center>
       </div>
     </main>
-    <section class="sp">
-      <div class="container">
-        <div class="grid-2">
-          <div class="post-img">
-            <img src="images/post.png" alt="" />
-          </div>
-          <div class="post-content">
-            <div class="cetagory">
-              <p>Category name</p>
+
+    {% if featured_post %} 
+      <section class="sp">
+        <div class="container">
+          <a href="{% url 'post_page' featured_post.slug %}">
+            <div class="grid-2">
+              <div class="post-img">
+                <img src="{{featured_post.image.url}}" alt="" />
+              </div>
+              <div class="post-content">
+                <div class="cetagory">
+                  <p>Category name</p>
+                </div>
+                <h1>{{featured_post.title}}</h1>
+                <p class="des">{{featured_post.content | truncatechars:200}}</p>
+                <a class="learn" href="#">Learn more <span class="material-icons"> trending_flat </span></a>
+              </div>
             </div>
-            <h1>
-              Lorem ipsum began as scrambled, nonsensical Latin derived from
-              Cicero's 1st-century BC text.
-            </h1>
-            <p class="des">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure
-              ullam animi repellat non ut delectus culpa! Iste quia corporis
-              illum doloribus facilis quo totam eveniet sapiente odit
-              cupiditate? Cumque, nam?
-            </p>
-            <a class="learn" href="#"
-              >Learn more <span class="material-icons"> trending_flat </span></a
-            >
-          </div>
+          </a>
         </div>
-      </div>
-    </section>
+      </section>
+    {% endif %}
+
     <section class="sp">
       <div class="container">
         <h1 class="sec-title">Top blogs</h1>
         <div class="grid-3">
 
-          {% for post in posts %}
+          {% for post in popular_posts %}
             <!-- card -->
             <a href="{% url 'post_page' post.slug %}">
               <div class="card">
                 <div class="post-img">
                   <img src="{{post.image.url}}" alt="{{post.title}}" />
-                  <div class="tag">Tag name</div>
+                  <div class="tag">{{post.tags.all.0.name}}</div>
                 </div>
                 <div class="card-content">
                   <h3>{{post.title}}</h3>
@@ -103,13 +98,14 @@
       <div class="container">
         <h1 class="sec-title">New blogs</h1>
         <div class="grid-3">
-          {% for post in posts %}
+
+          {% for post in recent_posts %}
             <!-- card -->
             <a href="{% url 'post_page' post.slug %}">
               <div class="card">
                 <div class="post-img">
                   <img src="{{post.image.url}}" alt="{{post.title}}" />
-                  <div class="tag">Tag name</div>
+                  <div class="tag">{{post.tags.all.0.name}}</div>
                 </div>
                 <div class="card-content">
                   <h3>{{post.title}}</h3>
@@ -127,6 +123,7 @@
             </a>
             <!-- card end-->
           {% endfor %}
+          
         </div>
         <center>
           <a href=""><button class="btn btn-primary rounded view">
