--- a/app/templates/app/post.html
+++ b/app/templates/app/post.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %} Blog | The Super Blog {% endblock title %}
+{% block title %} Blog | {{post.title}} {% endblock title %}
 {% load static %}
 {% block content %}
     <div class="container">
