--- a/app/templates/app/tag.html
+++ b/app/templates/app/tag.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %} Blog | Tags {% endblock title %}
+{% block title %} Blog | {{tag.name}} {% endblock title %}
 {% load static %}
 {% block content %}
   <div class="container">
@@ -20,237 +20,73 @@
 
         <center>
           <div class="typo">
-            <h1 class="title">Tag name</h1>
-            <p>
-              Lorem ipsum began as scrambled, nonsensical Latin derived from
-              Cicero's 1st-century BC text De Finibus Bonorum et Malorum.
-            </p>
+            <h1 class="title">{{tag.name}}</h1>
+            <p>{{tag.description}}</p>
           </div>
         </center>
         <section class="sp">
           <div class="container">
             <h1 class="sec-title">Top posts</h1>
             <div class="grid-2 blog">
-              <!-- card -->
-              <a href="#">
-                <div class="card">
-                  <div class="post-img">
-                    <img src="../images/post.png" alt="" />
-                    <div class="tag">Tag name</div>
-                  </div>
-                  <div class="card-content">
-                    <h3>
-                      A blog title and other stuffs will add here, also we
-                      can include.
-                    </h3>
-                    <div class="author">
-                      <div class="profile-pic">
-                        <img src="../images/author.svg" alt="" />
-                      </div>
-                      <div class="details">
-                        <p>Author name</p>
-                        <small>June 20, 2022</small>
+
+              {% for post in top_posts %} 
+                <!-- card -->
+                <a href="{% url 'post_page' post.slug %}">
+                  <div class="card">
+                    <div class="post-img">
+                      <img src="{{post.image.url}}" alt="" />
+                      <div class="tag">{{post.tags.all.0.name}}</div>
+                    </div>
+                    <div class="card-content">
+                      <h3>{{post.title}}</h3>
+                      <div class="author">
+                        <div class="profile-pic">
+                          <img src="{{post.author.url}}" alt="" />
+                        </div>
+                        <div class="details">
+                          <p>author.first_name</p>
+                          <small>{{post.last_updated | date}}</small>
+                        </div>
                       </div>
                     </div>
                   </div>
-                </div>
-              </a>
-              <!-- card end-->
-              <!-- card -->
-              <a href="#">
-                <div class="card">
-                  <div class="post-img">
-                    <img src="../images/post.png" alt="" />
-                    <div class="tag">Tag name</div>
-                  </div>
-                  <div class="card-content">
-                    <h3>
-                      A blog title and other stuffs will add here, also we
-                      can include.
-                    </h3>
-                    <div class="author">
-                      <div class="profile-pic">
-                        <img src="../images/author.svg" alt="" />
-                      </div>
-                      <div class="details">
-                        <p>Author name</p>
-                        <small>June 20, 2022</small>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </a>
-              <!-- card end-->
+                </a>
+                <!-- card end-->
+              {% endfor %}
+
             </div>
           </div>
         </section>
         <section class="sp">
           <div class="container">
-            <h1 class="sec-title">Treandy</h1>
+            <h1 class="sec-title">Recent Posts</h1>
             <div class="grid-3 blog-grid">
-              <!-- card -->
-              <a href="#">
-                <div class="card">
-                  <div class="post-img">
-                    <img src="../images/post.png" alt="" />
-                    <div class="tag">Tag name</div>
-                  </div>
-                  <div class="card-content">
-                    <h3>
-                      A blog title and other stuffs will add here, also we
-                      can include.
-                    </h3>
-                    <div class="author">
-                      <div class="profile-pic">
-                        <img src="../images/author.svg" alt="" />
-                      </div>
-                      <div class="details">
-                        <p>Author name</p>
-                        <small>June 20, 2022</small>
+
+              {% for post in recent_posts %} 
+                <!-- card -->
+                <a href="{% url 'post_page' post.slug %}">
+                  <div class="card">
+                    <div class="post-img">
+                      <img src="{{post.image.url}}" alt="" />
+                      <div class="tag">{{post.tags.all.0.name}}</div>
+                    </div>
+                    <div class="card-content">
+                      <h3></h3>
+                      <div class="author">
+                        <div class="profile-pic">
+                          <img src="../images/author.svg" alt="" />
+                        </div>
+                        <div class="details">
+                          <p>Author name</p>
+                          <small>{{post.last_updated | date}}</small>
+                        </div>
                       </div>
                     </div>
                   </div>
-                </div>
-              </a>
-              <!-- card end-->
-              <!-- card -->
-              <a href="#">
-                <div class="card">
-                  <div class="post-img">
-                    <img src="../images/post.png" alt="" />
-                    <div class="tag">Tag name</div>
-                  </div>
-                  <div class="card-content">
-                    <h3>
-                      A blog title and other stuffs will add here, also we
-                      can include.
-                    </h3>
-                    <div class="author">
-                      <div class="profile-pic">
-                        <img src="../images/author.svg" alt="" />
-                      </div>
-                      <div class="details">
-                        <p>Author name</p>
-                        <small>June 20, 2022</small>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </a>
-              <!-- card end-->
-              <!-- card -->
-              <a href="#">
-                <div class="card">
-                  <div class="post-img">
-                    <img src="../images/post.png" alt="" />
-                    <div class="tag">Tag name</div>
-                  </div>
-                  <div class="card-content">
-                    <h3>
-                      A blog title and other stuffs will add here, also we
-                      can include.
-                    </h3>
-                    <div class="author">
-                      <div class="profile-pic">
-                        <img src="../images/author.svg" alt="" />
-                      </div>
-                      <div class="details">
-                        <p>Author name</p>
-                        <small>June 20, 2022</small>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </a>
-              <!-- card end-->
-            </div>
-            <center>
-              <button class="btn btn-primary rounded view">
-                View more
-                <span class="material-icons"> trending_flat </span>
-              </button>
-            </center>
-          </div>
-        </section>
-        <section class="sp">
-          <div class="container">
-            <h1 class="sec-title">Featueal</h1>
-            <div class="grid-3 blog-grid">
-              <!-- card -->
-              <a href="#">
-                <div class="card">
-                  <div class="post-img">
-                    <img src="../images/post.png" alt="" />
-                    <div class="tag">Tag name</div>
-                  </div>
-                  <div class="card-content">
-                    <h3>
-                      A blog title and other stuffs will add here, also we
-                      can include.
-                    </h3>
-                    <div class="author">
-                      <div class="profile-pic">
-                        <img src="../images/author.svg" alt="" />
-                      </div>
-                      <div class="details">
-                        <p>Author name</p>
-                        <small>June 20, 2022</small>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </a>
-              <!-- card end-->
-              <!-- card -->
-              <a href="#">
-                <div class="card">
-                  <div class="post-img">
-                    <img src="../images/post.png" alt="" />
-                    <div class="tag">Tag name</div>
-                  </div>
-                  <div class="card-content">
-                    <h3>
-                      A blog title and other stuffs will add here, also we
-                      can include.
-                    </h3>
-                    <div class="author">
-                      <div class="profile-pic">
-                        <img src="../images/author.svg" alt="" />
-                      </div>
-                      <div class="details">
-                        <p>Author name</p>
-                        <small>June 20, 2022</small>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </a>
-              <!-- card end-->
-              <!-- card -->
-              <a href="#">
-                <div class="card">
-                  <div class="post-img">
-                    <img src="../images/post.png" alt="" />
-                    <div class="tag">Tag name</div>
-                  </div>
-                  <div class="card-content">
-                    <h3>
-                      A blog title and other stuffs will add here, also we
-                      can include.
-                    </h3>
-                    <div class="author">
-                      <div class="profile-pic">
-                        <img src="../images/author.svg" alt="" />
-                      </div>
-                      <div class="details">
-                        <p>Author name</p>
-                        <small>June 20, 2022</small>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </a>
-              <!-- card end-->
+                </a>
+                <!-- card end-->
+              {% endfor %}
+
             </div>
             <center>
               <button class="btn btn-primary rounded view">
@@ -266,35 +102,13 @@
       <!-- right layout -->
       <div class="right">
         <div class="block">
-          <h2 class="title2">Top Tags</h2>
+          <h2 class="title2">Explore</h2>
           <div class="blog-tags">
-            <div class="tag">Tag</div>
-            <div class="tag">Tag content</div>
-            <div class="tag">Tag</div>
-            <div class="tag">Tag content</div>
-            <div class="tag">Tag content</div>
-            <div class="tag">Tag</div>
-            <div class="tag">Tag content</div>
-            <div class="tag">Tag content</div>
-            <div class="tag">Tag</div>
-            <div class="tag">Tag content</div>
-            <div class="tag">Tag</div>
-          </div>
-        </div>
-        <div class="block">
-          <h2 class="title2">Other Tags</h2>
-          <div class="blog-tags">
-            <div class="tag">Tag</div>
-            <div class="tag">Tag content</div>
-            <div class="tag">Tag</div>
-            <div class="tag">Tag content</div>
-            <div class="tag">Tag content</div>
-            <div class="tag">Tag</div>
-            <div class="tag">Tag content</div>
-            <div class="tag">Tag content</div>
-            <div class="tag">Tag</div>
-            <div class="tag">Tag content</div>
-            <div class="tag">Tag</div>
+
+            {% for tag in tags %}  
+              <a href="{% url 'tag_page' tag.slug %}" class="tag">{{tag.name}}</a>
+            {% endfor %}
+
           </div>
         </div>
       </div>
