--- a/app/templates/app/post.html
+++ b/app/templates/app/post.html
@@ -10,21 +10,19 @@
                     <div class="top flex">
                         <div class="page-name">
                             <a href="#" class="learn">
-                            <span class="material-icons"> keyboard_return </span> Go
-                            back
+                                <span class="material-icons">keyboard_return</span> Go back
                             </a>
                             <h1>Blog</h1>
                         </div>
                     </div>
                 </div>
-
                 <center>
                     <div class="typo">
                         <h1 class="title blog-title">{{post.title}}</h1>
                         <div class="timeline">
                             <div class="track">
-                            <i class="uil uil-clock"></i>
-                            <p class="time">{{post.last_updated | date}}</p>
+                                <i class="uil uil-clock"></i>
+                                <p class="time">{{post.last_updated | date}}</p>
                             </div>
                             <div class="track">
                                 <i class="uil uil-users-alt"></i>
@@ -130,16 +128,16 @@
                                             <!-- Replies -->
                                             <div id="reply-{{reply.id}}" class="public-reply">
                                                 <div class="author">
-                                                <div class="profile-pic">
-                                                    <img src="{% static 'images/author.svg' %}" alt="" />
-                                                </div>
-                                                <div class="details">
-                                                    <p>{{reply.name}}</p>
-                                                    <small>{{reply.date | date}}</small>
-                                                </div>
+                                                    <div class="profile-pic">
+                                                        <img src="{% static 'images/author.svg' %}" alt="" />
+                                                    </div>
+                                                    <div class="details">
+                                                        <p>{{reply.name}}</p>
+                                                        <small>{{reply.date | date}}</small>
+                                                    </div>
                                                 </div>
                                                 <div class="comment">
-                                                <p>{{reply.content}}</p>
+                                                    <p>{{reply.content}}</p>
                                                 </div>
                                             </div>
                                             <!-- Replies end -->
@@ -189,7 +187,7 @@
                                 incluse.
                             </h3>
                             <a class="learn" href="#">Learn more
-                                <span class="material-icons"> trending_flat </span>
+                                <span class="material-icons">trending_flat</span>
                             </a>
                         </div>
                     </div>
@@ -288,10 +286,20 @@
                         Lorem ipsum began as scrambled, nonsensical Latin derived from
                         Cicero's 1st-century BC text De Finibus Bonorum et Malorum.
                     </p>
-                    <a class="learn" href="#"
-                        >Learn more
-                        <span class="material-icons"> trending_flat </span></a
-                    >
+                    <a class="learn" href="#">Learn more<span class="material-icons">trending_flat</span></a>
+                    </div>
+                    <div class="card">
+                        <h3>
+                            A blog title and other stuffs will add here, lso we can
+                            incluse.
+                        </h3>
+                        <p>
+                            Lorem ipsum began as scrambled, nonsensical Latin derived from
+                            Cicero's 1st-century BC text De Finibus Bonorum et Malorum.
+                        </p>
+                        <a class="learn" href="#">Learn more
+                            <span class="material-icons"> trending_flat </span>
+                        </a>
                     </div>
                     <div class="card">
                     <h3>
@@ -302,24 +310,7 @@
                         Lorem ipsum began as scrambled, nonsensical Latin derived from
                         Cicero's 1st-century BC text De Finibus Bonorum et Malorum.
                     </p>
-                    <a class="learn" href="#"
-                        >Learn more
-                        <span class="material-icons"> trending_flat </span></a
-                    >
-                    </div>
-                    <div class="card">
-                    <h3>
-                        A blog title and other stuffs will add here, lso we can
-                        incluse.
-                    </h3>
-                    <p>
-                        Lorem ipsum began as scrambled, nonsensical Latin derived from
-                        Cicero's 1st-century BC text De Finibus Bonorum et Malorum.
-                    </p>
-                    <a class="learn" href="#"
-                        >Learn more
-                        <span class="material-icons"> trending_flat </span></a
-                    >
+                    <a class="learn" href="#">Learn more<span class="material-icons">trending_flat</span></a>
                     </div>
                 </div>
                 <div class="block">
