--- a/app/static/app/style.css
+++ b/app/static/app/style.css
@@ -689,7 +689,7 @@ footer .container {
   width: 4rem;
 }
 
-.reactions > div {
+.reactions>div {
   display: flex;
   align-items: center;
   gap: 0.5rem;
@@ -697,7 +697,7 @@ footer .container {
   cursor: pointer;
 }
 
-.reactions > div i {
+.reactions>div i {
   font-size: 3rem;
   color: var(--red);
 }
@@ -833,31 +833,35 @@ p a {
   grid-template-columns: repeat(3, 1fr);
   gap: 5rem;
 }
+
 .menu {
   display: none !important;
 }
+
 .error-alert h3 {
   color: red;
   font-size: 1.6rem;
   font-weight: 400;
   margin-top: 2rem;
 }
+
 .inputs .input {
   position: relative;
 }
-.field-error {
-  background: red;
 
+.field-error {
   height: 100%;
   margin-top: 0.5rem;
   border-radius: 5rem;
 }
+
 .field-error p {
   margin-top: 0;
-  color: white;
-  font-size: 1.3rem;
+  color: red;
+  font-size: 1.5rem;
   padding: 0.5rem 1rem;
 }
+
 .promotion {
   background: linear-gradient(-45deg, var(--red), #8589ff);
   padding: 1rem;
@@ -870,12 +874,14 @@ p a {
   align-items: center;
   justify-content: center;
 }
+
 .promotion h3 a {
   color: white;
   font-size: 2rem;
   font-weight: 500;
   text-decoration: underline;
 }
+
 .reply {
   display: flex;
   align-items: center;
@@ -884,13 +890,16 @@ p a {
   margin-left: auto;
   margin-top: 0.5rem;
 }
+
 .reply i {
   font-size: 2rem;
   color: var(--red);
 }
+
 .reply-box {
   width: 100%;
 }
+
 .reply-box form {
   display: flex;
   align-items: center;
@@ -900,6 +909,7 @@ p a {
   margin-top: 2rem;
   border-radius: 5rem;
 }
+
 .reply-box textarea {
   width: 100%;
   height: 5rem;
@@ -909,17 +919,21 @@ p a {
   margin-top: 0;
   border: none;
 }
+
 .reply-box textarea::placeholder {
   font-size: 1.6rem;
   color: var(--black);
 }
+
 .reply-box button {
   width: 40%;
   margin: 0rem !important;
 }
+
 main {
   padding-top: 10rem !important;
 }
+
 /* responsive code */
 @media (max-width: 991px) {
   html {
@@ -946,23 +960,29 @@ main {
   .typo {
     width: 100%;
   }
+
   .s-active input {
     width: 100%;
   }
+
   .s-active {
     width: 80%;
   }
+
   .sp {
     padding: 5rem 0;
   }
+
   .layout {
     flex-direction: column;
   }
+
   .right {
     width: 100%;
     position: unset;
     margin-top: 0;
   }
+
   .flex {
     flex-direction: column;
     align-items: center;
@@ -971,27 +991,34 @@ main {
     margin-right: auto;
     margin-bottom: 5rem;
   }
+
   .sec-title::after {
     right: -16rem;
     width: 15rem;
   }
+
   .newsletter input {
     width: 100%;
   }
+
   .title {
     font-size: 3.5rem;
   }
+
   .page-name h1 {
     font-size: 3rem;
   }
+
   .left .typo {
     width: 100%;
   }
+
   .form {
     width: 100%;
     margin-top: 5rem;
     padding: 5rem 2rem;
   }
+
   footer .grid-4 {
     gap: 3rem;
   }
@@ -1010,37 +1037,46 @@ main {
     transform: translateX(100%);
     transition: 0.3s;
   }
+
   header {
     height: 10vh;
   }
+
   .links a {
     color: white;
   }
+
   .container-fluid {
     padding: 0 1rem;
     height: 100%;
   }
+
   .menu {
     font-size: 3.5rem;
     display: block !important;
   }
+
   header .btn {
     font-size: 1.4rem;
     padding: 0 2rem;
   }
+
   .active {
     transform: translateX(0) !important;
   }
+
   .reply-box form {
     flex-direction: column;
     border-radius: 1rem;
     padding: 2rem 1rem;
     gap: 2rem;
   }
+
   .reply-box input {
     margin-bottom: 2rem;
     border: 1px solid;
   }
+
   .promotion h3 a {
     color: white;
     font-size: 1.5rem;
@@ -1055,14 +1091,17 @@ main {
   font-size: 1.4rem;
   font-weight: 500;
 }
+
 .timeline button i,
 .likes button i {
   color: var(--red);
   font-size: 2.5rem;
 }
+
 .likes button i {
   font-size: 3rem;
 }
+
 .reply button {
   cursor: pointer;
   background: transparent;
