--- a/app/templates/app/post.html
+++ b/app/templates/app/post.html
@@ -10,7 +10,8 @@
                     <div class="top flex">
                         <div class="page-name">
                             <a href="#" class="learn">
-                                <span class="material-icons">keyboard_return</span> Go back
+                                <span class="material-icons">keyboard_return</span> 
+                                Go back
                             </a>
                             <h1>Blog</h1>
                         </div>
