--- a/templates/base.html
+++ b/templates/base.html
@@ -33,19 +33,27 @@
           <a href="{% url 'index' %}">All Posts</a>
         </div>
         <div class="action-btn">
-          <a href="pages/login.html"
-            ><button class="btn btn-scoundary">Login</button></a
-          >
-          <a href="pages/signup.html">
-            <button class="btn btn-primary">Sign Up</button></a
-          >
+          {% if user.is_authenticated %}  
+            <form method="POST" action="{% url 'logout' %}" >
+              {% csrf_token %}
+              <a href={% url 'logout' %}>
+                <button class="btn btn-scoundary">Logout</button>
+              </a>
+            </form>
+          {% else %}
+            <a href="{% url 'login' %}">
+              <button class="btn btn-scoundary">Login</button>
+            </a>
+            <a href="{% url 'signup' %}">
+              <button class="btn btn-primary">Sign Up</button>
+            </a>
+          {% endif %}
           <i class="uil uil-align-center-alt menu" onclick="menu()"></i>
         </div>
       </div>
     </header>
     <main>
-        {% block content %} 
-        {% endblock content %}
+        {% block content %}{% endblock content %}
     </main>
     <footer>
       <div class="container">
