--- a/app/templates/app/post.html
+++ b/app/templates/app/post.html
@@ -79,7 +79,29 @@
                             <div class="social-share">
                                 <div class="reactions">
                                 <div class="likes">
-                                    <i class="uil uil-heart"></i> <span>200</span>
+
+                                    {% if user.is_authenticated %}
+                                        <form method="POST" action="{% url 'likes' post.slug %}">
+                                            {% csrf_token %}
+                                            <input type="hidden" name="post_id" value="{{post.id}}">
+
+                                            {% if is_liked %}
+                                                <button type="submit" class="track">
+                                                    <i class="fa-solid fa-heart"></i><span>{{likes}}</span>
+                                                </button>
+                                            {% else %}
+                                                <button type="submit" class="track">
+                                                    <i class="uil uil-heart"></i><span>{{likes}}</span>
+                                                </button>
+                                            {% endif %}
+
+                                        </form>
+                                    {% else %}
+                                        <a href="{% url 'login' %}" class="track">
+                                            <i class="uil uil-heart"></i><span>{{likes}}</span>
+                                        </a>
+                                    {% endif %}
+
                                 </div>
                                 <div class="total-comments">
                                     <i class="uil uil-comment-alt"></i>
