--- a/app/static/app/style.css
+++ b/app/static/app/style.css
@@ -598,7 +598,7 @@ footer .container {
 
 .track i {
   color: var(--red);
-  font-size: 2.5rem;
+  font-size: 3rem;
 }
 
 .track p {
@@ -987,6 +987,7 @@ main {
     flex-direction: column;
     align-items: center;
   }
+
   .page-name {
     margin-right: auto;
     margin-bottom: 5rem;
@@ -1088,18 +1089,14 @@ main {
   border: none;
   padding: 0;
   background: transparent;
-  font-size: 1.4rem;
-  font-weight: 500;
+  font-weight: 400;
+  font-size: 2rem;
+  cursor: pointer;
 }
 
 .timeline button i,
 .likes button i {
   color: var(--red);
-  font-size: 2.5rem;
-}
-
-.likes button i {
-  font-size: 3rem;
 }
 
 .reply button {
