--- a/app/templates/app/author.html
+++ b/app/templates/app/author.html
@@ -9,7 +9,7 @@
         <div class="page-top">
           <div class="top flex">
             <div class="page-name">
-              <a href="#" class="learn"><span class="material-icons">keyboard_return</span>Go back</a>
+              <a href="/" class="learn"><span class="material-icons">keyboard_return</span>Go back</a>
               <h1>Author</h1>
             </div>
           </div>
