--- a/app/static/app/style.css
+++ b/app/static/app/style.css
@@ -593,7 +593,7 @@ footer .container {
 .track {
   display: flex;
   align-items: center;
-  gap: 0.5rem;
+  gap: 1.5rem;
 }
 
 .track i {
@@ -645,6 +645,8 @@ footer .container {
   padding: 2rem;
   border-radius: 1rem;
   margin-top: 1rem;
+  word-wrap: break-word;
+  max-width: 870px;
 }
 
 .public-reply {
