--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -55,7 +55,10 @@
                 </div>
                 <h1>{{featured_post.title}}</h1>
                 <p class="des">{{featured_post.content | safe | truncatechars:200}}</p>
-                <a class="learn" href="#">Learn more <span class="material-icons"> trending_flat </span></a>
+                <a class="learn" href="{% url 'post_page' featured_post.slug %}">
+                  Learn more
+                  <span class="material-icons">trending_flat</span>
+                </a>
               </div>
             </div>
           </a>
