--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,12 @@
         <div class="links">
           <a href="{% url 'index' %}">Home</a>
           <a href="{% url 'about' %}">About</a>
-          <a href="{% url 'index' %}">All Posts</a>
+
+          {% if user.is_authenticated %}  
+            <a href="{% url 'bookmarked_posts' %}">Bookmarks</a>
+            <a href="{% url 'liked_posts' %}">Likes</a>
+          {% endif %}
+
         </div>
         <div class="action-btn">
           {% if user.is_authenticated %}  
@@ -64,18 +69,26 @@
           <div class="link">
             <h2>Quick link</h2>
             <div class="q-link">
-              <a href="#">Home</a>
-              <a href="#">Blog</a>
-              <a href="#">Unsubscribe</a>
+              <a href="{% url 'index' %}">Home</a>
+              <a href="{% url 'about' %}">About</a>
             </div>
           </div>
           <div class="link">
-            <h2>Top cetagory</h2>
-            <div class="q-link">
-              <a href="{% url 'index' %}">Home</a>
-              <a href="{% url 'about' %}">About</a>
-              <a href="{% url 'index' %}">All Posts</a>
-            </div>
+            <h2>Favorite Posts</h2>
+
+              {% if user.is_authenticated %}  
+                <div class="q-link">
+                  <a href="{% url 'bookmarked_posts' %}">Bookmarks</a>
+                  <a href="{% url 'liked_posts' %}">Likes</a>
+                </div>
+
+              {% else %}
+                <div class="q-link">
+                  <a href="{% url 'login' %}">Login</a>
+                  <a href="{% url 'signup' %}">Sign Up</a>
+                </div>
+              {% endif %}
+ 
           </div>
           <div class="news-signup">
             <h2>Subscribe</h2>
